# substreams-solana-spl-token

./: .gitignore  Cargo.toml  Makefile  README.md  docker-compose.yaml
config/clickhouse/: config.xml
sink/: index.ts  package.json  pnpm-lock.yaml  tsconfig.json
tokens/: Cargo.toml  buf.gen.yaml  schema.sql  solana-spl-token-v0.1.0.spkg  solana-tokens-v0.1.0.spkg  substreams.yaml
tokens/src/: db_out.rs  instructions.rs  lib.rs  map_block.rs
tokens/src/pb/: mod.rs  sf.solana.spl.token.v1.rs  sol.transactions.v1.rs
