[package]
name = "substreams-solana-spl-token"
version = "1.0.0"
edition = "2021"
license = "MIT"
description = "Substreans Solana SPL Tokens"

[lib]
crate-type = ["cdylib"]

[dependencies]
anyhow = "1.0"
sha2 = "0.10.8"
prost = "0.11"
bs58 = "0.5.0"
borsh = { version = "1.5.0", features = ["derive"] }
prost-types = "0.11"
spl-token = "6.0"
substreams = { workspace = true }
substreams-solana = { workspace = true }
substreams-database-change = { workspace = true }
substreams-solana-program-instructions = { workspace = true }
